# stlab

./: README.md
esp32s3/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp32s3/certificates/firmware_upgrade/: root_ca.pem
esp32s3/certificates/mqtt_broker/: broker_ca.pem
esp32s3/examples/AllFunction/: CMakeLists.txt
esp32s3/examples/MinimalModemGPSExample/: MinimalModemGPSExample.ino
esp32s3/examples/ModemMqttPulishExample/: CMakeLists.txt  ModemMqttPulishExample.ino
esp32s3/extra_components/communication/: CMakeLists.txt  communication.c  communication.h
esp32s3/extra_components/devices/: CMakeLists.txt  devices_headers.h  devices_main.c
esp32s3/extra_components/gsm/: CMakeLists.txt  gsmGPS.c  gsmGPS.h  gsmMQTT.c  gsmMQTT.h  gsmModem.c  gsmModem.h
esp32s3/extra_components/mqtts/: CMakeLists.txt  component.mk  mqtts_headers.h  mqtts_main.c
esp32s3/extra_components/storage/: CMakeLists.txt  storage_headers.h  storage_main.c
esp32s3/extra_components/uart/: CMakeLists.txt  uart_header.h  uart_main.c
esp32s3/extra_components/wifi/: CMakeLists.txt  component.mk  wifi_headers.h  wifi_main.c
esp32s3/extra_components/xpower/: CMakeLists.txt  XPowersAXP2101.h  xpowerlib.h  xpowermain.c
esp32s3/main/: CMakeLists.txt  main.c
rasp/paho_mqtt/: install.sh  mensagens_mqtt.txt  mqtt_monitor  mqtt_monitor.c  run.sh
